<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F4F4"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/custum_post_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
/>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/custum_post_tv_date"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="4">

        <ImageView
            android:id="@+id/custum_post_img_esraa"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_rowSpan="3"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:background="#E91E63"
            app:srcCompat="@drawable/esraa" />

        <TextView
            android:id="@+id/custum_post_tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawableStart="@android:drawable/arrow_down_float"
            android:drawableLeft="@android:drawable/arrow_down_float"
            android:drawablePadding="8dp"
            android:text="@string/custum_post_folowers" />
        />

        <TextView
            android:id="@+id/custum_post_tv_folloing_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/custum_post_tv_postes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawableStart="@android:drawable/arrow_down_float"
            android:drawableLeft="@android:drawable/arrow_down_float"
            android:drawablePadding="8dp"
            android:text="@string/custum_post_posts" />

        <TextView
            android:id="@+id/custum_post_tv_postes_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/custum_post_tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawableStart="@android:drawable/arrow_down_float"
            android:drawableLeft="@android:drawable/arrow_down_float"
            android:drawablePadding="8dp"
            android:text="@string/custum_post_folowing" />
        />


        <TextView
            android:id="@+id/custum_post_tv_folowers_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1" />

        <Button
            android:id="@+id/custum_post_btn_folow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="#091C7A"
            android:text="@string/custum_post_folow"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/custum_post_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="#FFFFFF"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:textStyle="bold" />

    </GridLayout>

    <TextView
        android:id="@+id/custum_post_tv_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#E91E63"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custum_post_tv_body"
        android:orientation="horizontal">

        <Button
            android:id="@+id/custum_post_btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableLeft="@android:drawable/arrow_down_float"
            android:text="@string/custum_post_like"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/custum_post_btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableLeft="@android:drawable/arrow_down_float"
            android:text="@string/custum_post_share"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/custum_post_btn_coment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableLeft="@android:drawable/arrow_down_float"
            android:text="@string/custum_post_coment"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>